Enter button & button size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <section>
             <input type="text" placeholder="Search for Pokémon, type or Dex number" id="campo-pesquisa">
-            <button onclick="pesquisar()" >Search</button>
+            <button onclick="pesquisar()" id="mybutton">Search</button>
         </section>
         <section class="resultados-pesquisa" id="resultados-pesquisa">
         </section>
